# bart-recs

./: .gitignore  Makefile  README.md
algorithm/: calculate_wxax.ipynb  generate_datasets.ipynb  products.csv  requeriments.txt  trainning_calculate_wxax.ipynb
bart-datasets/: Makefile  run-simulate.ipynb
bart-extract-ga/: Makefile  pyproject.toml
bart-simulator/: Makefile  README.md  pyproject.toml
bart-simulator/simulator/: tools.py
benchmark/: Makefile  pyproject.toml
benchmark/data/: customers.csv  products.csv
benchmark/ganalytics/: __init__.py  main.py
benchmark/ganalytics/data/: customers.csv
datasets/: customers.csv
ecommerce/: .gemspec  Makefile  _config.yml  customers.html  index.html  products.html
ecommerce/_data/: customers.json  products.json
ecommerce/_includes/: analytics.html  header.html  product_item.html  scripts.html
ecommerce/_layouts/: default.html  product.html
ecommerce/_plugins/: randomNumber.rb
ecommerce/assets/js/: main.js
infrastructure/: api_gateway.tf  aws_glue.tf  cloudwatch.tf  datalake.tf  dynamodb.tf  ecommerce.tf  ecs_task.tf  iam.tf  lambda.tf  main.tf  s3_bucket.tf  terraform.tfstate
infrastructure/sources/: Makefile  ecommerce-policy.json
infrastructure/sources/api-authorizer/: lambda_function.py
infrastructure/sources/aws-glue/: bart-calc-publish-recs.py  bart-extract-data-ga.py  bart-join-data-ga.py
infrastructure/sources/bart-extract-data-ga/: Makefile  main.py  pyproject.toml  requirements.txt  requirements_libs.txt  run_main.py  setup.py
infrastructure/sources/bart-extract-data-ga/bart_extract/: __init__.py  ga_reporting.py  main.py
infrastructure/sources/bart-recommendations/: lambda_function.py
infrastructure/sources/bart-simulator-docker/: Dockerfile  Makefile
infrastructure/sources/bart-simulator-lambda/: lambda_function.py
simulator/: pyproject.toml
simulator/simulator/: main.py  tools.py
simulator/simulator/generate/: datasets.py
simulator/simulator/send_data_ga/: data_types.py
