[tool.poetry]
name = "bart-simulator"
packages = [ 
    { include="simulator", from="." }
]
version = "0.1.0"
description = "Send event views to Google Analytics and Generator customers or products"
authors = ["Cesar Augusto <cesarabruschetta@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/cesarbruschetta/bart-recs"
repository = "https://github.com/cesarbruschetta/bart-recs"
keywords = ["recs", "cli", "analytics", "GA", "dataset"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Command Line Interface",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pandas = "^1.0.3"
faker = "^4.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
simulator = 'simulator.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
