[tool.poetry]
name = "ganalytics"
version = "0.1.0"
description = "Send event views to Google Analytics"
authors = ["Cesar Augusto <cesarabruschetta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
ga_send = 'ganalytics.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
