[tool.poetry]
name = "simulator-cli"
version = "0.1.0"
description = "Send event views to Google Analytics and Generator customers or products"
authors = ["Cesar Augusto <cesarabruschetta@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pandas = "^1.0.3"
faker = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
